--- a/Spy See/Spy See/Base.lproj/Main.storyboard
+++ b/Spy See/Spy See/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Image references" minToolsVersion="12.0"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -150,7 +151,7 @@
                     <tabBarItem key="tabBarItem" title="" image="person" catalog="system" id="PXy-Ab-Wi8">
                         <imageReference key="selectedImage" image="person.fill" catalog="system" renderingMode="hierarchical-single">
                             <hierarchicalColors>
-                                <color name="B1"/>
+                                <color name="B3"/>
                                 <color systemColor="secondaryLabelColor"/>
                                 <color systemColor="tertiaryLabelColor"/>
                             </hierarchicalColors>
@@ -174,7 +175,7 @@
                     <tabBarItem key="tabBarItem" title="" image="gamecontroller" catalog="system" id="npo-o3-mTm">
                         <imageReference key="selectedImage" image="gamecontroller.fill" catalog="system" renderingMode="hierarchical-single">
                             <hierarchicalColors>
-                                <color name="B1"/>
+                                <color name="B3"/>
                                 <color systemColor="secondaryLabelColor"/>
                                 <color systemColor="tertiaryLabelColor"/>
                             </hierarchicalColors>
@@ -189,10 +190,12 @@
             <objects>
                 <tabBarController storyboardIdentifier="TabBarControllerID" id="3X0-Wd-1C1" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="9bf-BB-EER"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4ou-YS-hqO">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" itemPositioning="fill" id="4ou-YS-hqO">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" name="B3"/>
+                        <color key="selectedImageTintColor" name="B3"/>
                     </tabBar>
                     <connections>
                         <segue destination="rUb-fj-2jp" kind="relationship" relationship="viewControllers" id="yHG-8Q-nq4"/>
@@ -712,14 +715,14 @@
         <segue reference="UiY-CT-8kC"/>
     </inferredMetricsTieBreakers>
     <resources>
-        <image name="background" width="5162" height="11187"/>
+        <image name="background" width="1720.6666259765625" height="3729"/>
         <image name="gamecontroller" catalog="system" width="128" height="79"/>
         <image name="gamecontroller.fill" catalog="system" width="128" height="79"/>
         <image name="paperplane.fill" catalog="system" width="128" height="119"/>
         <image name="person" catalog="system" width="128" height="121"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
-        <namedColor name="B1">
-            <color red="0.13300000131130219" green="0.15700000524520874" blue="0.19200000166893005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="B3">
+            <color red="0.93300002813339233" green="0.93300002813339233" blue="0.93300002813339233" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
