Finish lobby page UI

--- a/Spy See/Spy See/Base.lproj/Main.storyboard
+++ b/Spy See/Spy See/Base.lproj/Main.storyboard
@@ -139,7 +139,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="YAR-UI-ff5">
             <objects>
-                <tabBarController storyboardIdentifier="TabBarControllerID" id="3X0-Wd-1C1" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="TabBarController" id="3X0-Wd-1C1" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="9bf-BB-EER"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" itemPositioning="fill" id="4ou-YS-hqO">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
