Finish vote page UI

--- a/Spy See/Spy See/Base.lproj/Main.storyboard
+++ b/Spy See/Spy See/Base.lproj/Main.storyboard
@@ -470,6 +470,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="ChB-zL-EqZ"/>
         <segue reference="lMZ-cn-lLz"/>
     </inferredMetricsTieBreakers>
     <resources>
